feat: update .gitignore to exclude personal documentation
- Add estado_actual.txt to gitignore
- Add README.md and ARQUITECTURA.md to gitignore
- Keep documentation files local for context

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Environment variables
 .env
 
+# Personal documentation (keep local)
+estado_actual.txt
+README.md
+ARQUITECTURA.md
+
 # Python
 __pycache__/
 *.py[cod]
